# shared-story

./: .gitignore  README.md  package.json  pyproject.toml
agent_cli/: client.py  main.py
app/: main.py
app/api/: responses.py
app/api/routes/: agent.py  stories.py
app/api/schemas/: common.py  health.py
app/core/: runtime_config.py
app/db/: models.py  session.py
app/review/: __init__.py  types.py
app/services/: in_memory_store.py  ranking_service.py  story_service.py  subscription_service.py
app/web/: routes.py
app/web/templates/: base.html  story_detail.html
apps/backend/: README.md  pyproject.toml
apps/backend/agent_cli/: __init__.py
apps/backend/app/: __init__.py  main.py
apps/backend/config/: __init__.py  phase1_runtime.py
apps/mobile/: README.md  package.json
apps/web/: eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
docs/architecture/: 2026-04-07-阶段一-架构设计.md  shared-story｜核心架构设计方案 v1.0.md
docs/design/: 2026-04-07-阶段一-UIUX-设计.md
docs/plans/: 2026-04-07-phase1-ui-ux-design.md  2026-04-08-阶段一-UIUX-优化实施计划.md  2026-04-08-阶段一-UIUX-验收记录.md  2026-04-08-阶段一-实施计划.md  2026-04-08-阶段一-验收记录.md
docs/requirements/: 2026-04-07-phase1-requirements-analysis.md  2026-04-07-阶段一-需求分析.md
scripts/: dev-backend.ps1  dev-web.ps1
tests/: conftest.py
tests/api/: test_agent_submission_api.py  test_health.py  test_story_read_api.py
tests/cli/: test_agent_cli.py
tests/core/: test_runtime_config.py
tests/web/: test_story_pages.py
(+23 files in other folders)
